<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Top header bar-->
    <ImageView
        android:id="@+id/header_bar"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/header_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <!--App name text: currently placeholder-->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/header_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/header_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo"/>

    <!--Vertical layout of content body-->
    <LinearLayout
        android:id="@+id/content_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@+id/header_bar">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/favorites_title"
            android:textAlignment="center"
            android:textSize="18sp" />

        <!--Horizontal layout of first row-->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="100"
                app:layout_constraintTop_toBottomOf="@+id/header_bar">

                <TextView
                    android:id="@+id/lineLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/type"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/favorite_type_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/lineName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/line_name"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/favorite_line_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/stationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/station_name"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/favorite_station_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/fave_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fave_button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_button" />


    </LinearLayout>

        <!--Vertical layout of second row-->
        <LinearLayout
            android:id="@+id/favorites_holder"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ListView
                android:id="@+id/stations_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>