<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Top header bar-->
    <ImageView
        android:id="@+id/header_bar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:contentDescription="@string/header_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <!--App name text-->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/header_bar"
        app:layout_constraintEnd_toEndOf="@+id/header_bar"
        app:layout_constraintStart_toStartOf="@+id/header_bar"
        app:layout_constraintTop_toTopOf="@+id/header_bar"
        app:srcCompat="@drawable/app_logo" />

    <!--Vertical layout of content body-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_bar">

        <!--Horizontal layout of first button row-->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp">

<!--            &lt;!&ndash;Bus button&ndash;&gt;-->
<!--            <ImageView-->
<!--                android:id="@+id/bus_icon"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="215dp"-->
<!--                android:layout_weight="1"-->
<!--                android:contentDescription="@string/bus_icon"-->
<!--                app:srcCompat="@drawable/selector_frame_bus" />-->

            <!--Subway button-->
            <ImageView
                android:id="@+id/subway_icon"
                android:layout_width="0dp"
                android:layout_height="215dp"
                android:layout_weight="1"
                android:contentDescription="@string/subway_icon"
                app:srcCompat="@drawable/selector_frame_subway" />

            <ImageView
                android:id="@+id/rail_icon"
                android:layout_width="0dp"
                android:layout_height="215dp"
                android:layout_weight="1"
                android:contentDescription="@string/rail_icon"
                app:srcCompat="@drawable/selector_frame_rail" />

        </LinearLayout>

        <!--Horizontal layout of second button row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp">

            <!-- Regional Rail button-->


            <!--Favorite button-->
            <ImageView
                android:id="@+id/favorites_icon"
                android:layout_width="0dp"
                android:layout_height="215dp"
                android:layout_weight="1"
                android:contentDescription="@string/favorites_icon"
                app:srcCompat="@drawable/selector_frame_favorites" />

        </LinearLayout>
        <!--For displaying last known lcoation-->
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity" >

            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="N/A" />

        </RelativeLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>