<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Top header bar-->
    <ImageView
        android:id="@+id/header_bar"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/header_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <!--App name text: currently placeholder-->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/header_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/header_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo"/>

    <!--Vertical layout of content body-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@+id/header_bar">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/rail_title"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp">

            <Spinner
                android:id="@+id/bus_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--from-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"

            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fromText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/from"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/from_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <!--to-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"

            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/toText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/to"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/to_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>